<resources>
    <string name="app_name">Reciclag</string>
    <string name="yo_conduzco">YO CONDUZCO</string>
    <string name="yo_reciclo">YO RECICLO</string>
    <string name="registro_conductor">Registro Conductor</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tengo_una_cuenta_creada">No tengo una Cuenta creada.</string>
    <string name="contrase_a">Contraseña...</string>
    <string name="correo_electronico">Correo electronico...</string>
    <string name="registrarse">Registrarse</string>
    <string name="login_reciclador">Login Reciclador</string>
</resources>
