<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31094F"
    tools:context=".ConductorSignUp2">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="153dp"
        android:text="@string/registrarse"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="428dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="151dp"
        android:text="@string/ingresar"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="57dp"
        android:text="Login Conductor"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="47dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="397dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="549dp"
        android:text="@string/no_tengo_una_cuenta_creada"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="546dp" />
</RelativeLayout>